frontoffice/service-backfo.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-backfo
spec:
  selector:
    app: fo-backend
    type: backend
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8999
      targetPort: 8999
      name: http-backend
