frontoffice/service-front.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-fo-front 
spec:
  selector:
    app: fo-front
    type: front
  type:  NodePort 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80 
      name: http-front
      nodePort: 31104
