frontoffice/virtualServiceBackFO.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-backfo
spec:
  hosts:
  - "*"
  gateways:
  - mygateway
  http:
  - match:
    - uri:
        prefix: "/v1/api/ged"
    - uri:
        prefix: "/v1/api/dossiers"
    - uri:
        prefix: "/v1/api/historique-traitement-dossiers"
    - uri:
        prefix: "/v1/api/transferts"
    - uri:
        prefix: "/v1/api/actions"
    - uri:
        prefix: "/v1/api/attribut-complementaires"
    - uri:
        prefix: "/v1/api/attribut-complementaire-valeurs"
    - uri:
        prefix: "/v1/api/document-dossiers"
    - uri:
        prefix: "/v1/api/documents"
    - uri:
        prefix: "/v1/api/etat-dossiers"
    - uri:
        prefix: "/v1/api/evenements"
    - uri:
        prefix: "/v1/api/modules"
    - uri:
        prefix: "/v1/api/motif-transferts"
    - uri:
        prefix: "/v1/api/natures"
    - uri:
        prefix: "/v1/api/organigrammes"
    - uri:
        prefix: "/v1/api/type-actions"
    - uri:
        prefix: "/v1/api/type-dossier-attribut-complementaires"
    - uri:
        prefix: "/v1/api/type-dossier-documents"
    - uri:
        prefix: "/v1/api/type-dossiers"
    - uri:
        prefix: "/v1/api/type-objets"
    - uri:
        prefix: "/v1/api/type-pieces"
    - uri:
        prefix: "/v1/api/user-workflows"
    - uri:
        prefix: "/v1/api/utilisateurs"
    - uri:
        prefix: "/v1/api/workflows"
    - uri:
        prefix: "/v1/api/totalDossier" 
    - uri:
        prefix: "/v1/api/all-" 
    - uri:
        prefix: "/v1/api/vs"         
    route:
    - destination:
        host: service-backfo.default.svc.cluster.local    
        port:
          number: 8999
