frontoffice/virtualServiceFrontAdmin.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fo-front-vs
spec:
  hosts:
  - "*"
  gateways:
  - mygateway
  http:
  - name: frontend-vs
    match:
    - uri:
        prefix: /
    
    route:
    - destination:
        host: service-fo-front
        port:
          number: 80
